@@ -5,7 +5,7 @@
 # distro web page: http://distro.pipfield.ca/ 
 
 # Please add a tool you want to check
-TOOLS="m4 autoconf autoheader automake automake-1.7 automake-1.8 automake-1.9 aclocal aclocal-1.7 aclocal-1.8 aclocal-1.9 intltoolize gettextize libtoolize "
+TOOLS="m4 autoconf autoheader automake automake-1.7 automake-1.8 automake-1.9 aclocal aclocal-1.7 aclocal-1.8 aclocal-1.9 intltoolize gettextize "
 ENVPATTERN='PATH\|FLAGS\|LANG'
 
 srcdir=`dirname $0`
